# differentiator

./: CMakeLists.txt  README.md  diff.cpp  diff.h  func_info.h  graphmaker.cpp  language.cpp  language.h  main.cpp  optimizator.cpp  optimizator.h  tree.cpp  tree.h
graphmaker_for_diff/: graphmaker.h
latexmaker_for_diff/: latexmaker.cpp  latexmaker.h
onegin/: oneggin.cpp  oneggin.h
optimizator/: optimizator.cpp  pow.cpp  pow.h
rec_descent/: language.cpp  language.h
tree/: tree.cpp  tree.h
